--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "axios": "^0.21.1",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
     "next": "^10.0.5",
