--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "next": "^10.0.5",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
+    "react-awesome-slider": "^4.1.0",
     "react-dom": "^17.0.1"
   },
   "devDependencies": {
