--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "carbon-components-react": "^7.26.0",
     "carbon-icons": "^7.0.7",
     "next": "^10.0.5",
+    "object-mapper": "^6.2.0",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-awesome-slider": "^4.1.0",
-    "react-dom": "^17.0.1"
+    "react-dom": "^17.0.1",
+    "swr": "^0.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.10",
