--- a/package.json
+++ b/package.json
@@ -7,9 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "eslint .",
-    "lint:fix": "eslint . --fix",
-    "storybook": "start-storybook -s ./public -p 6006",
-    "build-storybook": "build-storybook"
+    "lint:fix": "eslint . --fix"
   },
   "dependencies": {
     "axios": "^0.21.1",
