--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "app-engine-v7",
+  "name": "entando-webui",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -7,11 +7,13 @@
     "build": "next build",
     "start": "next start",
     "lint": "eslint .",
-    "lint:fix": "eslint . --fix"
+    "lint:fix": "eslint . --fix",
+    "type-check": "tsc"
   },
   "dependencies": {
     "axios": "^0.21.1",
     "next": "^10.0.5",
+    "next-auth": "^3.13.2",
     "object-mapper": "^6.2.0",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
@@ -24,6 +26,9 @@
     "@storybook/addon-essentials": "^6.1.11",
     "@storybook/addon-links": "^6.1.11",
     "@storybook/react": "^6.1.11",
+    "@types/node": "^14.14.35",
+    "@types/react": "^17.0.3",
+    "@types/react-dom": "^17.0.2",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.2.2",
     "eslint": "^7.17.0",
@@ -37,6 +42,7 @@
     "eslint-plugin-react": "^7.22.0",
     "eslint-plugin-react-hooks": "^4.2.0",
     "prettier": "^2.2.1",
-    "storybook-css-modules-preset": "^1.0.5"
+    "storybook-css-modules-preset": "^1.0.5",
+    "typescript": "^4.2.3"
   }
 }
