--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
   },
   "dependencies": {
     "axios": "^0.21.1",
-    "next": "^10.0.5",
+    "next": "^10.1.3",
     "next-auth": "^3.13.2",
     "object-mapper": "^6.2.0",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "single-spa": "^5.9.2",
+    "single-spa-react": "^4.1.1",
     "swr": "^0.4.0"
   },
   "devDependencies": {
