--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
     "type-check": "tsc"
   },
   "dependencies": {
+    "@emotion/babel-plugin": "11.0.0",
+    "@emotion/styled": "^11.3.0",
     "axios": "^0.21.1",
     "next": "^10.1.3",
     "next-auth": "^3.13.2",
     "object-mapper": "^6.2.0",
     "prop-types": "^15.7.2",
-    "react": "^17.0.1",
+    "react": "^17.0.2",
     "react-dom": "^17.0.1",
     "single-spa": "^5.9.2",
     "single-spa-react": "^4.1.1",
@@ -28,6 +30,7 @@
     "@storybook/addon-essentials": "^6.1.11",
     "@storybook/addon-links": "^6.1.11",
     "@storybook/react": "^6.1.11",
+    "@types/next-auth": "^3.15.0",
     "@types/node": "^14.14.35",
     "@types/react": "^17.0.3",
     "@types/react-dom": "^17.0.2",
